--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/nckoller/Screamcast#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
