--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/nckoller/Screamcast#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
