--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "cookie!86",
+        "password": "password",
         "database": "screamcast_db",
         "host": "127.0.0.1",
         "dialect": "mysql"
@@ -15,7 +15,7 @@
         "logging": false
     },
     "production": {
-        "use_env_variable": "screamcast_db",
+        "use_env_variable": "JAWSDB_URL",
         "dialect": "mysql"
     }
 }
