--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
         "logging": false
     },
     "production": {
-        "use_env_variable": "screamcast_db",
+        "use_env_variable": "JAWSDB_URL",
         "dialect": "mysql"
     }
 }
